--- a/dragNDropTutorialByAppwriteYT/styles.css
+++ b/dragNDropTutorialByAppwriteYT/styles.css
@@ -8,11 +8,11 @@ body {
     background-image: linear-gradient(#292a30 .1em, transparent .1em),
     linear-gradient(90deg, #292a30 .1em, transparent .1em);
     background-size: 4em 4em;
-    height: 50vh;
-    width: 50vw;
+    height: 100vh;
+    /* width: 50vw;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 
 }
 
